--- a/src/sx/ip/FXMLManualProxy.fxml
+++ b/src/sx/ip/FXMLManualProxy.fxml
@@ -1,14 +1,90 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXCheckBox?>
+<?import com.jfoenix.controls.JFXComboBox?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import de.jensd.fx.glyphs.materialicons.MaterialIconView?>
+<?import javafx.geometry.Insets?>
+<?import javafx.geometry.Rectangle2D?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sx.ip.FXMLManualProxyController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="375.0" style="-fx-background-color: rgba(255,255,255,0); -fx-border-color: #ced4da; -fx-border-width: 1px; -fx-border-insets: 0px; -fx-border-radius: 0px;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sx.ip.FXMLManualProxyController">
     <children>
-        <Button layoutX="126" layoutY="90" text="Click Me!" onAction="#handleButtonAction" fx:id="button" />
-        <Label layoutX="126" layoutY="120" minHeight="16" minWidth="69" fx:id="label" />
+      <ImageView blendMode="DARKEN" fitHeight="450.0" fitWidth="375.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@imgs/bg-375x450.jpg" />
+         </image>
+         <viewport>
+            <Rectangle2D />
+         </viewport>
+      </ImageView>
+      <ImageView fitHeight="45.0" fitWidth="230.0" layoutX="73.0" layoutY="48.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@imgs/ipsx-logo-230x45.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="74.0" layoutY="135.0" text="PROTOCOL" textFill="#707070">
+         <font>
+            <Font size="11.0" />
+         </font>
+      </Label>
+      <JFXComboBox fx:id="comboProtocol" focusColor="#80bdff" layoutX="74.0" layoutY="151.0" prefHeight="25.0" prefWidth="230.0" style="-fx-background-color: rgba(255,255,255,0.8);" unFocusColor="#ced4da" />
+      <Label layoutX="73.0" layoutY="188.0" text="PROXY IP" textFill="#707070">
+         <font>
+            <Font size="11.0" />
+         </font>
+      </Label>
+      <JFXTextField focusColor="#80bdff" labelFloat="true" layoutX="74.0" layoutY="203.0" prefHeight="25.0" prefWidth="150.0" style="-fx-background-color: rgba(255,255,255,0.8);" unFocusColor="#ced4da" />
+      <Label layoutX="233.0" layoutY="203.0" text=":" textFill="#707070">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="250.0" layoutY="188.0" text="PORT" textFill="#707070">
+         <font>
+            <Font size="11.0" />
+         </font>
+      </Label>
+      <JFXTextField focusColor="#80bdff" layoutX="247.0" layoutY="203.0" prefHeight="25.0" prefWidth="56.0" style="-fx-background-color: rgba(255,255,255,0.8);" unFocusColor="#ced4da">
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+      </JFXTextField>
+      <JFXCheckBox checkedColor="#2aace0" layoutX="74.0" layoutY="259.0" prefHeight="18.0" prefWidth="230.0" selected="true" text="Bypass proxy server for local addresses" textFill="#707070" unCheckedColor="#ced4da">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXCheckBox>
+      <JFXCheckBox checkedColor="#2aace0" contentDisplay="RIGHT" graphicTextGap="0.0" layoutX="74.0" layoutY="290.0" prefHeight="23.0" prefWidth="242.0" selected="true" text="I agree with the" textFill="#707070" unCheckedColor="#ced4da">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <graphic>
+            <Hyperlink contentDisplay="TOP" prefHeight="23.0" prefWidth="119.0" text="terms and condition" textFill="#2aace0" underline="true" />
+         </graphic>
+      </JFXCheckBox>
+      <JFXButton defaultButton="true" layoutX="120.0" layoutY="345.0" prefHeight="36.0" prefWidth="140.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Activate Proxy" textAlignment="CENTER" textFill="WHITE">
+         <font>
+            <Font size="16.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
+      <JFXButton fx:id="btnClose" contentDisplay="CENTER" layoutX="343.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#handleCloseAction" prefHeight="32.0" prefWidth="32.0" text=" " textAlignment="CENTER" textFill="#a4a4a4">
+         <graphic>
+            <MaterialIconView fill="#707070" glyphName="CLOSE" size="16" textAlignment="CENTER" />
+         </graphic>
+      </JFXButton>
     </children>
+   <opaqueInsets>
+      <Insets />
+   </opaqueInsets>
 </AnchorPane>
