--- a/src/sx/ip/FXMLManualProxy.fxml
+++ b/src/sx/ip/FXMLManualProxy.fxml
@@ -45,12 +45,12 @@ limitations under the License.
             <Image url="@imgs/ipsx-logo-230x45.png" />
          </image>
       </ImageView>
-      <JFXButton fx:id="btnClose" contentDisplay="CENTER" layoutX="343.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#handleCloseAction" prefHeight="32.0" prefWidth="32.0" text=" " textAlignment="CENTER" textFill="#a4a4a4">
+      <JFXButton fx:id="btnClose" contentDisplay="CENTER" focusTraversable="false" layoutX="343.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#handleCloseAction" prefHeight="32.0" prefWidth="32.0" text=" " textAlignment="CENTER" textFill="#a4a4a4">
          <graphic>
             <MaterialIconView fill="#707070" glyphName="CLOSE" size="16.0" textAlignment="CENTER" />
          </graphic>
       </JFXButton>
-      <JFXCheckBox fx:id="advancedSettings" checkedColor="#2aace0" layoutX="20.0" layoutY="110.0" onAction="#handleAdvancedSettings" prefHeight="18.0" prefWidth="230.0" text="Advanced Settings" textFill="#707070" unCheckedColor="#ced4da">
+      <JFXCheckBox fx:id="advancedSettings" checkedColor="#2aace0" focusTraversable="false" layoutX="20.0" layoutY="110.0" onAction="#handleAdvancedSettings" prefHeight="18.0" prefWidth="230.0" text="Advanced Settings" textFill="#707070" unCheckedColor="#ced4da">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
