--- a/src/sx/ip/FXMLManualProxy.fxml
+++ b/src/sx/ip/FXMLManualProxy.fxml
@@ -78,7 +78,7 @@ limitations under the License.
                   <Font size="11.0" />
                </font>
             </Label>
-            <JFXTextField fx:id="proxyId" focusColor="#80bdff" labelFloat="true" layoutX="74.0" layoutY="83.0" prefHeight="25.0" prefWidth="150.0" style="-fx-background-color: rgba(255,255,255,0.8);" unFocusColor="#ced4da" />
+            <JFXTextField fx:id="proxyIp" focusColor="#80bdff" labelFloat="true" layoutX="74.0" layoutY="83.0" prefHeight="25.0" prefWidth="150.0" style="-fx-background-color: rgba(255,255,255,0.8);" unFocusColor="#ced4da" />
             <Label layoutX="233.0" layoutY="83.0" text=":" textFill="#707070">
                <font>
                   <Font size="16.0" />
