Some changes and fixes
- Fix LinuxManager erro for testing
- Implementation restart settings message
- Implementation remove all settings link
- minor fixes

--- a/src/sx/ip/FXMLManualProxy.fxml
+++ b/src/sx/ip/FXMLManualProxy.fxml
@@ -123,6 +123,12 @@ limitations under the License.
          </cursor>
       </JFXButton>
       <JFXProgressBar fx:id="progressBar" layoutX="90.0" layoutY="389.0" progress="0.0" visible="false" />
+      <Hyperlink layoutX="231.0" layoutY="420.0" onAction="#removeAllSettings" text="Remove all settings" textFill="#2aace0" underline="true" wrapText="true" />
+      <Label fx:id="restartSettingsMsg" layoutX="81.0" layoutY="392.0" text="Restart your browser to reload settings" textFill="#707070" visible="false">
+         <font>
+            <Font size="11.0" />
+         </font>
+      </Label>
     </children>
    <opaqueInsets>
       <Insets />
