--- a/src/sx/ip/resources/fxml/FXMLManualProxy.fxml
+++ b/src/sx/ip/resources/fxml/FXMLManualProxy.fxml
@@ -31,11 +31,11 @@ limitations under the License.
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="375.0" style="-fx-background-color: rgba(255,255,255,0); -fx-border-color: #ced4da; -fx-border-width: 1px; -fx-border-insets: 0px; -fx-border-radius: 0px;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sx.ip.FXMLManualProxyController">
+<AnchorPane id="AnchorPane" fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="375.0" style="-fx-background-color: rgba(255,255,255,0); -fx-border-color: #ced4da; -fx-border-width: 1px; -fx-border-insets: 0px; -fx-border-radius: 0px;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sx.ip.controllers.FXMLManualProxyController">
     <children>
       <ImageView blendMode="DARKEN" fitHeight="450.0" fitWidth="375.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@imgs/bg-375x450.jpg" />
+            <Image url="@../imgs/bg-375x450.jpg" />
          </image>
          <viewport>
             <Rectangle2D />
@@ -43,7 +43,7 @@ limitations under the License.
       </ImageView>
       <ImageView fitHeight="45.0" fitWidth="230.0" layoutX="73.0" layoutY="48.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@imgs/ipsx-logo-230x45.png" />
+            <Image url="@../imgs/ipsx-logo-230x45.png" />
          </image>
       </ImageView>
       <JFXButton fx:id="btnClose" contentDisplay="CENTER" focusTraversable="false" layoutX="343.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#handleCloseAction" prefHeight="32.0" prefWidth="32.0" text=" " textAlignment="CENTER" textFill="#a4a4a4">
