--- a/src/sx/ip/resources/fxml/FXMLLogin.fxml
+++ b/src/sx/ip/resources/fxml/FXMLLogin.fxml
@@ -15,6 +15,7 @@ limitations under the License.
 -->
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import de.jensd.fx.glyphs.materialicons.MaterialIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.Cursor?>
@@ -48,22 +49,6 @@ limitations under the License.
             </ImageView>
          </center>
       </BorderPane>
-      <JFXButton fx:id="btnLoginEmail" defaultButton="true" layoutX="106.0" layoutY="254.0" prefHeight="36.0" prefWidth="160.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Login with Email" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="105.0" AnchorPane.rightAnchor="109.0">
-         <font>
-            <Font size="12.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </JFXButton>
-      <JFXButton fx:id="btnLoginFacebook" defaultButton="true" layoutX="106.0" layoutY="298.0" prefHeight="36.0" prefWidth="160.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Login with Facebook" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="106.0" AnchorPane.rightAnchor="110.0">
-         <font>
-            <Font size="12.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </JFXButton>
       <AnchorPane fx:id="loginInfoPane" layoutX="-2.0" layoutY="130.0" prefHeight="124.0" prefWidth="349.0" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="10.0">
          <children>
             <Label layoutX="38.0" layoutY="11.0" text="Login" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="58.0">
@@ -74,6 +59,27 @@ limitations under the License.
             <Label layoutX="40.0" layoutY="43.0" prefHeight="64.0" prefWidth="253.0" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore." textOverrun="CLIP" wrapText="true" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="58.0" />
          </children>
       </AnchorPane>
+      <JFXButton fx:id="btnLoginFacebook" defaultButton="true" layoutX="106.0" layoutY="298.0" onAction="#loginWithFacebookAction" prefHeight="36.0" prefWidth="160.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Login with Facebook" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="106.0" AnchorPane.rightAnchor="110.0">
+         <font>
+            <Font size="12.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
+      <JFXButton fx:id="btnLoginEmail" defaultButton="true" layoutX="106.0" layoutY="254.0" onAction="#loginWithEmailAction" prefHeight="36.0" prefWidth="160.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Login with Email" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="105.0" AnchorPane.rightAnchor="109.0">
+         <font>
+            <Font size="12.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
+      <JFXButton fx:id="btnClose" contentDisplay="CENTER" focusTraversable="false" layoutX="353.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#handleCloseAction" prefHeight="32.0" prefWidth="32.0" text=" " textAlignment="CENTER" textFill="#a4a4a4" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <graphic>
+            <MaterialIconView fill="#707070" glyphName="CLOSE" size="16.0" textAlignment="CENTER" />
+         </graphic>
+      </JFXButton>
     </children>
    <opaqueInsets>
       <Insets />
