--- a/src/sx/ip/resources/fxml/FXMLResetPassword.fxml
+++ b/src/sx/ip/resources/fxml/FXMLResetPassword.fxml
@@ -15,7 +15,6 @@ limitations under the License.
 -->
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXPasswordField?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import de.jensd.fx.glyphs.materialicons.MaterialIconView?>
 <?import javafx.geometry.Insets?>
@@ -29,7 +28,7 @@ limitations under the License.
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="mainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="375.0" style="-fx-background-color: rgba(255,255,255,0); -fx-border-color: #ced4da; -fx-border-width: 1px; -fx-border-insets: 0px; -fx-border-radius: 0px;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sx.ip.controllers.FXMLLoginEmailController">
+<AnchorPane id="AnchorPane" fx:id="mainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="375.0" style="-fx-background-color: rgba(255,255,255,0); -fx-border-color: #ced4da; -fx-border-width: 1px; -fx-border-insets: 0px; -fx-border-radius: 0px;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sx.ip.controllers.FXMLResetPasswordController">
     <children>
       <BorderPane prefHeight="450.0" prefWidth="374.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="0.0">
          <center>
@@ -57,12 +56,12 @@ limitations under the License.
             <MaterialIconView fill="#707070" glyphName="CLOSE" size="16.0" textAlignment="CENTER" />
          </graphic>
       </JFXButton>
-      <Label layoutX="29.0" layoutY="100.0" prefHeight="25.0" prefWidth="173.0" text="Login with Email" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="172.0">
+      <Label layoutX="29.0" layoutY="100.0" prefHeight="25.0" prefWidth="173.0" text="Reset Password" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="172.0">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <AnchorPane fx:id="loginInfoPane" layoutY="152.0" prefHeight="202.0" prefWidth="372.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <AnchorPane fx:id="loginInfoPane" layoutX="2.0" layoutY="152.0" prefHeight="112.0" prefWidth="373.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0">
          <children>
             <Label layoutX="5.0" layoutY="20.0" prefHeight="14.0" prefWidth="90.0" text="Email Address" textFill="#707070" AnchorPane.leftAnchor="64.0" AnchorPane.rightAnchor="218.0">
                <font>
@@ -71,17 +70,10 @@ limitations under the License.
             </Label>
             <JFXTextField fx:id="userEmail" focusColor="#80bdff" layoutX="65.0" layoutY="35.0" prefHeight="26.0" prefWidth="249.0" unFocusColor="#ced4da" AnchorPane.leftAnchor="65.0" AnchorPane.rightAnchor="58.0" />
             <MaterialIconView fill="#707070" glyphName="MAIL_OUTLINE" layoutX="29.0" layoutY="60.0" size="24.0" />
-            <Label layoutX="65.0" layoutY="100.0" prefHeight="14.0" prefWidth="90.0" text="Password" textFill="#707070" AnchorPane.leftAnchor="65.0" AnchorPane.rightAnchor="217.0">
-               <font>
-                  <Font size="11.0" />
-               </font>
-            </Label>
-            <JFXPasswordField fx:id="userPass" focusColor="#80bdff" layoutX="65.0" layoutY="114.0" prefHeight="26.0" prefWidth="249.0" unFocusColor="#ced4da" AnchorPane.leftAnchor="65.0" AnchorPane.rightAnchor="58.0" />
-            <Hyperlink fx:id="btnReset" accessibleText="https://ip.sx/dist/IPSX-Terms-of-Service.pdf" alignment="CENTER_RIGHT" contentDisplay="TOP" layoutX="198.0" layoutY="162.0" onAction="#resetPassword" prefHeight="24.0" prefWidth="160.0" text="Forgot Your Password?" textFill="#2aace0" textOverrun="CLIP" AnchorPane.leftAnchor="198.0" AnchorPane.rightAnchor="0.0" />
-            <MaterialIconView fill="#707070" glyphName="LOCK_OUTLINE" layoutX="30.0" layoutY="139.0" size="24.0" />
+            <Hyperlink fx:id="btnBackToLogin" accessibleText="https://ip.sx/dist/IPSX-Terms-of-Service.pdf" alignment="CENTER_RIGHT" contentDisplay="TOP" layoutX="135.0" layoutY="77.0" onAction="#backToLoginAction" prefHeight="24.0" prefWidth="228.0" text="Already have an account? Login" textFill="#2aace0" textOverrun="CLIP" AnchorPane.leftAnchor="135.0" AnchorPane.rightAnchor="8.0" />
          </children>
       </AnchorPane>
-      <JFXButton fx:id="btnLoginEmail" defaultButton="true" layoutX="114.0" layoutY="376.0" onAction="#loginAction" prefHeight="36.0" prefWidth="160.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Login" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="114.0" AnchorPane.rightAnchor="118.0">
+      <JFXButton fx:id="btnSendLink" defaultButton="true" layoutX="83.0" layoutY="376.0" onAction="#sendLinkAction" prefHeight="36.0" prefWidth="200.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Send Password Reset Link" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="82.0" AnchorPane.rightAnchor="93.0">
          <font>
             <Font size="12.0" />
          </font>
